--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
+    "test": "vitest",
     "crop-screenshots": "bash scripts/crop-screenshots.sh"
   },
   "dependencies": {
@@ -35,16 +36,22 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/lz-string": "^1.3.34",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.22",
     "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.1.1",
+    "jsdom": "^27.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.16"
   }
 }
